--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,23 +10,28 @@
 <body>
     <main>
         <div class="container">
+            <h1>Chuck Norris api routes</h1>
             <section>
                 <p>The first route returns 10 random Cuck Norris jokes</p>
-                <a href="https://chuckexam.herokuapp.com/api/jokes/">Go to route</a>
+                <a href="https://checkexam2.herokuapp.com/api/jokes/">Go to route</a>
             </section>
             <hr>
             <section>
                 <p>The second route returns a specified number of Cuck Norris jokes</p>
                 <p>To specify the number of jokes, change the last URL amount parameter, where</p>
-                <p>at https://chuckexam.herokuapp.com/api/jokes/:amount </p>
-                <a href="https://chuckexam.herokuapp.com/api/jokes/65">Go to route</a>
+                <p>at https://checkexam2.herokuapp.com/api/jokes/:amount </p>
+                <a href="https://checkexam2.herokuapp.com/api/jokes/4">Go to route</a>
             </section>
             <hr>
             <section>
-                <p>The second route returns a specified number of Cuck Norris jokes</p>
-                <p>To specify the number of jokes, change the last URL amount parameter, where</p>
-                <p>at https://chuckexam.herokuapp.com/api/jokes/:amount </p>
-                <a href="https://chuckexam.herokuapp.com/api/jokes/65">Go to route</a>
+                <p>The third section returns 10 jokes from a specific category, like food</p>
+                <p>at https://checkexam2.herokuapp.com/api/jokes/:category </p>
+                <a href="https://checkexam2.herokuapp.com/api/jokes/food">Go to route</a>
+            </section>
+            <section>
+                <p>The fourth section returns a specified amount of jokes from a specific category</p>
+                <p>at https://checkexam2.herokuapp.com/api/jokes/:category/:amount </p>
+                <a href="https://checkexam2.herokuapp.com/api/jokes/food/2">Go to route</a>
             </section>
 
         </div>
